added the correct url for api calls on client side

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       const msg = document.querySelector(".message");
 
       const submitForm = () => {
-        fetch("https://invited-fourth-cocoa.glitch.me/submit", {
+        fetch("https://randomizer-w0s9.onrender.com/submit", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
